code improvements after code review.