@@ -24,81 +24,81 @@ public class DriverServiceImpl implements DriverService {
 
   @Override
   public Driver register(RegisterDriverDto request) {
-    logger.info(String.format("Registering new driver: email=%s", request.email()));
+    logger.info("Registering new driver: email=%s".formatted(request.email()));
 
     try {
       Driver driver = EntityFactory.from(request);
       driver = driverRepository.save(driver);
-      logger.info(String.format("Driver successfully registered: email=%s, id=%s", driver.getEmail(), driver.getId()));
+      logger.info("Driver successfully registered: email=%s, id=%s".formatted(driver.getEmail(), driver.getId()));
       return driver;
     } catch (Exception e) {
-      logger.error(String.format("Failed to register driver: email=%s, error=%s", request.email(), e.getMessage()), e);
+      logger.error("Failed to register driver: email=%s, error=%s".formatted(request.email(), e.getMessage()), e);
       throw e;
     }
   }
 
   @Override
   public Driver updateLocation(UpdateLocationDto request) {
-    logger.info(String.format("Updating driver location: driverId=%s", request.driverId()));
+    logger.info("Updating driver location: driverId=%s".formatted(request.driverId()));
 
     try {
       Driver driver = getDriver(request.driverId());
       driver.setCurrent(request.current());
       driver = driverRepository.save(driver);
-      logger.info(String.format("Driver location updated: driverId=%s, location=%s", driver.getId(), driver.getCurrent()));
+      logger.info("Driver location updated: driverId=%s, location=%s".formatted(driver.getId(), driver.getCurrent()));
       return driver;
 
     } catch (Exception e) {
-      logger.error(String.format("Failed to update driver location: driverId=%s, error=%s", request.driverId(), e.getMessage()), e);
+      logger.error("Failed to update driver location: driverId=%s, error=%s".formatted(request.driverId(), e.getMessage()), e);
       throw e;
     }
   }
 
   @Override
   public Driver setOffline(UUID driverId) {
-    logger.info(String.format("Setting driver to offline: driverId=%s", driverId));
+    logger.info("Setting driver to offline: driverId=%s".formatted(driverId));
 
     try {
       Driver driver = getDriver(driverId);
       validationService.checkNoActiveRideForDriver(driverId);
       driver.setStatus(DriverStatus.OFFLINE);
       driver = driverRepository.save(driver);
-      logger.info(String.format("Driver set to offline: driverId=%s", driverId));
+      logger.info("Driver set to offline: driverId=%s".formatted(driverId));
       return driver;
     } catch (Exception e) {
-      logger.error(String.format("Failed to set driver offline: driverId=%s, error=%s", driverId, e.getMessage()), e);
+      logger.error("Failed to set driver offline: driverId=%s, error=%s".formatted(driverId, e.getMessage()), e);
       throw e;
     }
   }
 
   @Override
   public Driver setAvailable(UUID driverId) {
-    logger.info(String.format("Setting driver to available: driverId=%s", driverId));
+    logger.info("Setting driver to available: driverId=%s".formatted(driverId));
 
     try {
       Driver driver = getDriver(driverId);
       validationService.checkNoActiveRideForDriver(driverId);
       driver.setStatus(DriverStatus.AVAILABLE);
       driver = driverRepository.save(driver);
-      logger.info(String.format("Driver set to available: driverId=%s", driverId));
+      logger.info("Driver set to available: driverId=%s".formatted(driverId));
       return driver;
     } catch (Exception e) {
-      logger.error(String.format("Failed to set driver available: driverId=%s, error=%s", driverId, e.getMessage()), e);
+      logger.error("Failed to set driver available: driverId=%s, error=%s".formatted(driverId, e.getMessage()), e);
       throw e;
     }
   }
 
   @Override
   public Driver getDriver(UUID driverId) throws NotFoundException {
-    logger.info(String.format("Retrieving driver details: driverId=%s", driverId));
+    logger.info("Retrieving driver details: driverId=%s".formatted(driverId));
 
     try {
       validationService.checkIdentifier(driverId, Driver.class);
       Driver driver = driverRepository.findById(driverId).orElseThrow(() -> new NotFoundException(Driver.class, driverId));
-      logger.info(String.format("Driver details retrieved: driverId=%s", driverId));
+      logger.info("Driver details retrieved: driverId=%s".formatted(driverId));
       return driver;
     } catch (Exception e) {
-      logger.error(String.format("Failed to retrieve driver details: driverId=%s, error=%s", driverId, e.getMessage()), e);
+      logger.error("Failed to retrieve driver details: driverId=%s, error=%s".formatted(driverId, e.getMessage()), e);
       throw e;
     }
   }
