@@ -20,21 +20,21 @@ public class EstimationServiceImpl implements EstimationService {
 
   @Override
   public EstimationDto estimate(Location pickup, Location dropOff) {
-    logger.info(String.format("Estimating duration: pickup=%s, dropOff=%s", pickup, dropOff));
+    logger.info("Estimating duration: pickup=%s, dropOff=%s".formatted(pickup, dropOff));
 
     try {
       int duration = geoService.estimateDuration(pickup, dropOff);
-      logger.info(String.format("Estimated duration: %d minutes", duration));
+      logger.info("Estimated duration: %d minutes".formatted(duration));
       return new EstimationDto(duration, null, null, null);
     } catch (Exception e) {
-      logger.error(String.format("Failed to estimate duration: pickup=%s, dropOff=%s, error=%s", pickup, dropOff, e.getMessage()), e);
+      logger.error("Failed to estimate duration: pickup=%s, dropOff=%s, error=%s".formatted(pickup, dropOff, e.getMessage()), e);
       throw e;
     }
   }
 
   @Override
   public EstimationDto estimate(Location pickup, Location dropOff, Location current, LocalDateTime from) {
-    logger.info(String.format("Estimating full trip: pickup=%s, dropOff=%s, current=%s, from=%s", pickup, dropOff, current, from));
+    logger.info("Estimating full trip: pickup=%s, dropOff=%s, current=%s, from=%s".formatted(pickup, dropOff, current, from));
 
     try {
       int duration = geoService.estimateDuration(pickup, dropOff);
@@ -43,11 +43,11 @@ public class EstimationServiceImpl implements EstimationService {
       LocalDateTime pickupEndAt = pickupAt.plus(MAX_WAIT);
       LocalDateTime completedAt = pickupAt.plusMinutes(duration);
 
-      logger.info(
-          String.format("Estimation result: duration=%d, pickupAt=%s, pickupEndAt=%s, completedAt=%s", duration, pickupAt, pickupEndAt, completedAt));
+      logger.info("Estimation result: duration=%d, pickupAt=%s, pickupEndAt=%s, completedAt=%s"
+          .formatted(duration, pickupAt, pickupEndAt, completedAt));
       return new EstimationDto(duration, pickupAt, pickupEndAt, completedAt);
     } catch (Exception e) {
-      logger.error(String.format("Failed to estimate full trip: pickup=%s, dropOff=%s, current=%s, from=%s, error=%s", pickup, dropOff, current, from,
+      logger.error("Failed to estimate full trip: pickup=%s, dropOff=%s, current=%s, from=%s, error=%s".formatted(pickup, dropOff, current, from,
           e.getMessage()), e);
       throw e;
     }
@@ -55,16 +55,16 @@ public class EstimationServiceImpl implements EstimationService {
 
   @Override
   public EstimationDto estimate(Location pickup, Location dropOff, LocalDateTime pickupAt) {
-    logger.info(String.format("Estimating completion: pickup=%s, dropOff=%s, pickupAt=%s", pickup, dropOff, pickupAt));
+    logger.info("Estimating completion: pickup=%s, dropOff=%s, pickupAt=%s".formatted(pickup, dropOff, pickupAt));
 
     try {
       int estimatedDuration = geoService.estimateDuration(pickup, dropOff);
       LocalDateTime estimatedCompletedAt = pickupAt.plusMinutes(estimatedDuration);
-      logger.info(String.format("Estimation result: estimatedDuration=%d, estimatedCompletedAt=%s", estimatedDuration, estimatedCompletedAt));
+      logger.info("Estimation result: estimatedDuration=%d, estimatedCompletedAt=%s".formatted(estimatedDuration, estimatedCompletedAt));
       return new EstimationDto(estimatedDuration, null, null, estimatedCompletedAt);
     } catch (Exception e) {
-      logger.error(
-          String.format("Failed to estimate completion: pickup=%s, dropOff=%s, pickupAt=%s, error=%s", pickup, dropOff, pickupAt, e.getMessage()), e);
+      logger.error("Failed to estimate completion: pickup=%s, dropOff=%s, pickupAt=%s, error=%s"
+          .formatted(pickup, dropOff, pickupAt, e.getMessage()), e);
       throw e;
     }
   }
